# baor-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  k3s.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: _reusable-bump.yml  _reusable-ci.yml  _reusable-docker.yml  ci.yml  dev.yml  main.yml  pr.yml  prod.yml  test.yml
docs/: ARCHITECTURE.md  BLUE-GREEN.md  BRANCHING.md  CANARY.md  CD-RUNBOOK.md  CD.md  RELEASE-STRATEGIES.md  SETUP.md
src/app/: calculator.py  main.py  server.py
tests/: test_calculator.py  test_main.py  test_server.py
