[project]
name = "cicd-demo"
version = "0.1.0"
description = "A demo project showcasing a complete CI pipeline (Python + GitHub Actions + Docker)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---- Linting & formatting (Ruff) ----
[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]

# ---- Type checking ----
[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

# ---- Tests & coverage ----
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
